@@ -1,9 +1,10 @@
+TOPDIR	?= ..
 include Makefile.common
 
 TESTS		+= $(TESTS_EXTRA)
 #TESTS		+= $(TESTS_UNITTEST)
 
-include ../Makefile.subdir.gnu
+include $(TOPDIR)/Makefile.subdir.gnu
 
 
 # requires libcppunit-dev to be installed
